--- a/templates/articles/articles.html
+++ b/templates/articles/articles.html
@@ -36,7 +36,7 @@
             {% for object in object_list %}
             <div class="col-md-4 d-flex ftco-animate">
                 <div class="blog-entry justify-content-end">
-                    <a href="blog-single.html" class="block-20"
+                    <a href="{% url 'detail' object.slug %}" class="block-20"
                        style="background-image:url({{ object.image.url }})">
                     </a>
                     <div class="text p-4 float-right d-block">
