--- a/templates/articles/detail.html
+++ b/templates/articles/detail.html
@@ -36,7 +36,7 @@
                     </div>
                 </div>
 
-                <div class="pt-5 mt-5">
+                <div class="pt-5 mt-5" id="comments">
                     <h3 class="mb-5">{{ comments.count }} Comments</h3>
                     <ul class="comment-list">
                         {% for comment in comments %}
@@ -59,22 +59,32 @@
 
                     <div class="comment-form-wrap pt-5">
                         <h3 class="mb-5">Leave a comment</h3>
-                        <form action="#" class="p-5 bg-light">
+                        <form method="post" class="p-5 bg-light" enctype="multipart/form-data">
+                            {% csrf_token %}
                             <div class="form-group">
                                 <label for="name">Name *</label>
-                                <input type="text" class="form-control" id="name">
+{#                                <input type="text" class="form-control" id="name">#}
+                                {{ form.name }}
                             </div>
                             <div class="form-group">
                                 <label for="email">Email *</label>
-                                <input type="email" class="form-control" id="email">
+{#                                <input type="email" class="form-control" id="email">#}
+                                    {{ form.email }}
+                            </div>
+                            <div class="form-group">
+                                <label for="website">Image</label>
+{#                                <input type="url" class="form-control" id="website">#}
+                                {{ form.image }}
                             </div>
                             <div class="form-group">
                                 <label for="website">Website</label>
-                                <input type="url" class="form-control" id="website">
+{#                                <input type="url" class="form-control" id="website">#}
+                                {{ form.website }}
                             </div>
                             <div class="form-group">
                                 <label for="message">Message</label>
-                                <textarea name="" id="message" cols="30" rows="10" class="form-control"></textarea>
+{#                                <textarea name="" id="message" cols="30" rows="10" class="form-control"></textarea>#}
+                                {{ form.message }}
                             </div>
                             <div class="form-group">
                                 <input type="submit" value="Post Comment" class="btn py-3 px-4 btn-primary">
