--- a/templates/articles/articles.html
+++ b/templates/articles/articles.html
@@ -50,6 +50,7 @@
                             </div>
                         </div>
                         <h3 class="heading mb-3"><a href="#">{{ object.title }}</a></h3>
+                        <small class="mb-3">{{ object.category }}</small>
                         <p>{{ object.content|slice:100 }} ...</p>
                         <p><a href="#" class="btn-custom"><span class="ion-ios-arrow-round-forward mr-3"></span>Read
                             more</a></p>
