--- a/templates/articles/detail.html
+++ b/templates/articles/detail.html
@@ -95,10 +95,10 @@
             </div>
             <div class="col-lg-4 sidebar pl-lg-5 ftco-animate">
                 <div class="sidebar-box">
-                    <form action="#" class="search-form">
+                    <form action="/articles/" method="get" class="search-form">
                         <div class="form-group">
                             <span class="icon icon-search"></span>
-                            <input type="text" class="form-control" placeholder="Type a keyword and hit enter">
+                                <input type="search" name="search" class="form-control" placeholder="Type a keyword and hit enter">
                         </div>
                     </form>
                 </div>
@@ -106,7 +106,7 @@
                     <div class="categories">
                         <h3>Categories</h3>
                         {% for category in categories %}
-                            <li><a href="#">{{ category }} <span class="ion-ios-arrow-forward"></span></a></li>
+                            <li><a href="/articles/?cat={{ category }}">{{ category }} <span class="ion-ios-arrow-forward"></span></a></li>
                         {% endfor %}
                     </div>
                 </div>
