--- a/templates/articles/detail.html
+++ b/templates/articles/detail.html
@@ -20,8 +20,11 @@
 </section>
 
 <section class="ftco-section ftco-degree-bg">
-    <div class="container">
+    <div class="container pas" link="pass">
         <div class="row">
+            
+
+            
             <div class="col-lg-8 ftco-animate">
 
                 <p class="mb-5">
@@ -94,57 +97,58 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 sidebar pl-lg-5 ftco-animate">
-                <div class="sidebar-box">
-                    <form action="/articles/" method="get" class="search-form">
-                        <div class="form-group">
-                            <span class="icon icon-search"></span>
-                                <input type="search" name="search" class="form-control" placeholder="Type a keyword and hit enter">
-                        </div>
-                    </form>
-                </div>
-                <div class="sidebar-box ftco-animate">
-                    <div class="categories">
-                        <h3>Categories</h3>
-                        {% for category in categories %}
-                            <li><a href="/articles/?cat={{ category }}">{{ category }} <span class="ion-ios-arrow-forward"></span></a></li>
-                        {% endfor %}
-                    </div>
-                </div>
-                <div class="sidebar-box ftco-animate">
-                    <h3>Recent Blog</h3>
-                    {% for last_2_article in last_2_articles %}
-                        <div class="block-21 mb-4 d-flex">
-                        <a class="blog-img mr-4"
-                           style="background-image:url({{ last_2_article.image.url }})"></a>
-                        <div class="text">
-                            <h3 class="heading"><a href="{% url 'detail' last_2_article.slug %}">{{ last_2_article.title }}</a></h3>
-                            <div class="meta">
-                                <div><a href="#"><span class="icon-calendar"></span>{{ last_2_article.created_at }}</a></div>
-{#                                <div><a href="#"><span class="icon-person"></span> Admin</a></div>#}
-                                <div><a href="#"><span class="icon-chat"></span> 19</a></div>
-                            </div>
-                        </div>
-                    </div>
-                    {% endfor %}
+           
 
-                </div>
-                <div class="sidebar-box ftco-animate">
-                    <h3>Tag Cloud</h3>
-                    <div class="tagcloud">
-                        {% for tag in tags %}
-                            <a href="/articles/?tag={{ tag }}" class="tag-cloud-link">{{ tag }}</a>
-                        {% endfor %}
+        </div>
+        <div class="col-lg-4 sidebar pl-lg-5 ftco-animate">
+            <div class="sidebar-box">
+                <form action="/articles/" method="get" class="search-form">
+                    <div class="form-group">
+                        <span class="icon icon-search"></span>
+                            <input type="search" name="search" class="form-control" placeholder="Type a keyword and hit enter">
                     </div>
-                </div>
-                <div class="sidebar-box ftco-animate">
-                    <h3>Paragraph</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus itaque, autem necessitatibus
-                        voluptate quod mollitia delectus aut, sunt placeat nam vero culpa sapiente consectetur
-                        similique, inventore eos fugit cupiditate numquam!</p>
+                </form>
+            </div>
+            <div class="sidebar-box ftco-animate">
+                <div class="categories">
+                    <h3>Categories</h3>
+                    {% for category in categories %}
+                        <li><a href="/articles/?cat={{ category }}">{{ category }} <span class="ion-ios-arrow-forward"></span></a></li>
+                    {% endfor %}
                 </div>
             </div>
+            <div class="sidebar-box ftco-animate">
+                <h3>Recent Blog</h3>
+                {% for last_2_article in last_2_articles %}
+                    <div class="block-21 mb-4 d-flex">
+                    <a class="blog-img mr-4"
+                       style="background-image:url({{ last_2_article.image.url }})"></a>
+                    <div class="text">
+                        <h3 class="heading"><a href="{% url 'detail' last_2_article.slug %}">{{ last_2_article.title }}</a></h3>
+                        <div class="meta">
+                            <div><a href="#"><span class="icon-calendar"></span>{{ last_2_article.created_at }}</a></div>
 
+                            <div><a href="#"><span class="icon-chat"></span> 19</a></div>
+                        </div>
+                    </div>
+                </div>
+                {% endfor %}
+
+            </div>
+            <div class="sidebar-box ftco-animate">
+                <h3>Tag Cloud</h3>
+                <div class="tagcloud">
+                    {% for tag in tags %}
+                        <a href="/articles/?tag={{ tag }}" class="tag-cloud-link">{{ tag }}</a>
+                    {% endfor %}
+                </div>
+            </div>
+            <div class="sidebar-box ftco-animate">
+                <h3>Paragraph</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus itaque, autem necessitatibus
+                    voluptate quod mollitia delectus aut, sunt placeat nam vero culpa sapiente consectetur
+                    similique, inventore eos fugit cupiditate numquam!</p>
+            </div>
         </div>
     </div>
 </section>
