--- a/templates/footer.html
+++ b/templates/footer.html
@@ -8,9 +8,9 @@
                     <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there
                         live the blind texts.</p>
                     <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-                        <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                        <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                        <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+                        <li class="ftco-animate"><a href="/"><span class="icon-twitter"></span></a></li>
+                        <li class="ftco-animate"><a href="/"><span class="icon-facebook"></span></a></li>
+                        <li class="ftco-animate"><a href="/"><span class="icon-instagram"></span></a></li>
                     </ul>
                 </div>
             </div>
@@ -21,11 +21,11 @@
                         <a class="img mr-4 rounded"
                            style="background-image:url({% static 'images/ximage_1.jpg.pagespeed.ic.6nutUC1128.jpg' %})"></a>
                         <div class="text">
-                            <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
+                            <h3 class="heading"><a href="/">Even the all-powerful Pointing has no control about</a></h3>
                             <div class="meta">
-                                <div><a href="#"></span> Oct. 16, 2019</a></div>
-                                <div><a href="#"></span> Admin</a></div>
-                                <div><a href="#"></span> 19</a></div>
+                                <div><a href="/"></span> Oct. 16, 2019</a></div>
+                                <div><a href="/"></span> Admin</a></div>
+                                <div><a href="/"></span> 19</a></div>
                             </div>
                         </div>
                     </div>
@@ -47,14 +47,12 @@
                 <div class="ftco-footer-widget mb-4 ml-md-5">
                     <h2 class="ftco-heading-2">Information</h2>
                     <ul class="list-unstyled">
-                        <li><a href="#" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>Home</a>
-                        </li>
-                        <li><a href="#" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>About</a>
-                        </li>
-                        <li><a href="#" class="py-1 d-block"><span
-                                class="ion-ios-arrow-forward mr-3"></span>Articles</a></li>
-                        <li><a href="#" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>Contact</a>
-                        </li>
+                        <ul class="navbar-nav ml-auto">
+                            <li class="nav-item active"><a href="/" class="nav-link">Home</a></li>
+                            <li class="nav-item"><a href="/articles/" class="nav-link">Articles</a></li>
+                            <li class="nav-item"><a href="/team/" class="nav-link">Team</a></li>
+                            <li class="nav-item"><a href="/contact/" class="nav-link">Contact</a></li>
+                        </ul>
                     </ul>
                 </div>
             </div>
